tests/baselines/reference/generatorInAmbientContext3.d.errors.txt
generatorInAmbientContext3.d.ts(2,5): error TS1221: Generators are not allowed in an ambient context.


==== generatorInAmbientContext3.d.ts (1 errors) ====
    declare class C {
        *generator(): any;
        ~
!!! error TS1221: Generators are not allowed in an ambient context.
    }